# objective

./: .gitignore  CMakeLists.txt  README.md  makefile
arch/: CMakeLists.txt  SecondaryInit.cpp  SecondaryInit.h
arch/x86/: PrimaryInit.cpp  PrimaryInit.h  toolchain-x86.cmake
arch/x86/cpuinfo/: CpuInfo.s  Cpuinfo.cpp  Cpuinfo.h
arch/x86/gdt/: Gdt.cpp  Gdt.h  GlobalObj.cpp  GlobalObj.h  GoToGdtMemSeg.s  SwitchToGdt.asm
arch/x86/ic/: IPic.h  Pic.cpp  Pic.h
arch/x86/idt/: Idt.cpp  Idt.h
arch/x86/inc/: TypeConverter.cpp  TypeConverter.h  types.h
arch/x86/io/: GlobalObj.cpp  GlobalObj.h  VGADisplay.cpp  VGADisplay.h  VGADisplayInfo.h
arch/x86/msr/: Msr.cpp  Msr.h
arch/x86/port/: Operations  PortOps.cpp  PortOps.h
drivers/: CMakeLists.txt
drivers/acpi/: Acpi.cpp  Acpi.h  Ics.cpp  Ics.h  acpi.cpp  acpi.h  acpi.h.gch
include/: CMakeLists.txt  ISingleton.h  MemoryOperations.cpp  MemoryOperations.h  StringOperations.cpp  StringOperations.h  Templates.h  TypeConverter.cpp  TypeConverter.h  arch  types.h
include/containers/: Tuple.h
iso/boot/grub/: grub.cfg
kernel/: GlobalConstruct.cpp  GlobalConstruct.h  boot.s  kernel.c  kernel.cpp  linker.ld
